Adicionado ao menu: Promoções e pequenas modificações.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     </strong>
                 <li>
                     <div class="details">
-                        <h3>Bolo di mi</h3>
-                        <p class="description">Bolo di mi tradicional feito no forno da vó Zélia. </p>
+                        <h3>Bolo di mio</h3>
+                        <p class="description">Bolo di mio tradicional feito no forno da vó Zélia. </p>
                     </div>
 
                     <strong class="price">
@@ -41,7 +41,7 @@
                 <li>
                     <div class="details">
                         <h3>Rôizdoce</h3>
-                        <p class="description">Arroz doce de cai os queixos, cê vai querer sô um cadiquim.</p>
+                        <p class="description">Arroz doce de cai os queixos, cê num vai querer sô um cadiquim.</p>
                     </div>
 
                     <strong class="price">
@@ -55,7 +55,7 @@
             <ul>
                 <li>
                     <div class="details">
-                        <h3>Caldo di cana</h3>
+                        <h3>Caldi cana</h3>
                         <p class="description">Caldicana docin, pensa num trêm baum sô.</p>
                     </div>
 
@@ -64,9 +64,9 @@
                     </strong>
                 <li>
                     <div class="details">
-                        <h3>Café quentin</h3>
-                        <p class="description">Café quentin passado na hora prô cê.
-                            (Cê credita que esse café aqui levanta até difunto?)
+                        <h3>Cafézin quentin</h3>
+                        <p class="description">Cafézin quentin passado na hora prô cê.
+                            (Cê credita que esse cafézin aqui levanta até difunto?)
                         </p>
                     </div>
 
@@ -76,12 +76,46 @@
                 <li>
                     <div class="details">
                         <h3>Marvada</h3>
-                        <p class="description">Um cadiquim de pinga feita da miô qualidade.
+                        <p class="description">Um cadiquim de pinga feita da miô qualidade.(Fraga, se der um golé nela ce num vai para)
                         </p>
                     </div>
 
                     <strong class="price">
                         R$2.50
+                    </strong>
+                </li>
+            </ul>
+    </section>
+        <section>
+        <h2>Promoção sô</h2>
+            <ul>
+                <li>
+                    <div class="details">
+                        <h3>Cafézin com broinha de fubá</h3>
+                        <p class="description">Cafézin pingado com broinha de fubá di cumê di capitão.                   
+                        </p>
+                    </div>
+
+                    <strong class="price">
+                        R$4.89
+                    </strong>
+                <li>
+                    <div class="details">
+                        <h3>Quejim com goiabada + Cafézin</h3>
+                        <p class="description">Pensa num quejin fresco com goiabada e o cafézin passado na hora, o miô di baum trem. </p>
+                    </div>
+
+                    <strong class="price">
+                        R$5.39
+                    </strong>
+                <li>
+                    <div class="details">
+                        <h3>Curau di mio + copo dileiti</h3>
+                        <p class="description">Curau de mio feito da miô fazenda da região e o leiti tirado da nossa vaquinha mimosa.  </p>
+                    </div>
+
+                    <strong class="price">
+                        R$6.29
                     </strong>
                 </li>
             </ul>
